8221738: ErrorFile option does not handle pre-existing error files of the same name

Reviewed-by: coleenp, clanger